fix: footer logo links to home, add spacing above footer

--- a/src/Components/Footer/scss/style.scss
+++ b/src/Components/Footer/scss/style.scss
@@ -1,7 +1,7 @@
 .footer {
     text-align: center;
-    width: 100%;    
-    // margin-top: 7%;
+    width: 100%;
+    padding-top: 3rem;
     background-color: #f5f5f5;
     .copyrights {
         background-color: #CF9050;
